styled authoring comment; fixed page overflow.

--- a/sites/all/themes/wriite/css/fields.css
+++ b/sites/all/themes/wriite/css/fields.css
@@ -11,7 +11,7 @@
  */
 
 .field-items img{
-    height:200px;
+    height:300px;
 }
 
 .field /* Wrapper for any CCK field. */ {
