--- a/sites/all/themes/wriite/css/layout-fixed.css
+++ b/sites/all/themes/wriite/css/layout-fixed.css
@@ -30,7 +30,7 @@ body {
    * for the necessary IE5/IE6quirks hack to center a div.
    */
 
-  width: 1500px;
+  
   padding:0px;
 }
 
